# WayView

./: .gitignore  README.md  WayView.sln
WayView/: CMakeLists.txt  WayView.rc  WayView.vcxproj  WayView.vcxproj.filters  build_qrc_window_QT.bat  main.cpp  my_window_QT.cpp  my_window_QT.h  pch.h  project_local_deffinitions.cmake  qrc_window_QT.cpp  resource.h  window_QT.qrc
WayView/files_Qt/Milky/48/: B0.psd  B1.psd  B2.psd  B3.psd  B4.psd
